--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
+
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottomNavigationView">
+        android:layout_above="@+id/bottomNavigationView"
+        android:background="@drawable/img">
 
     </FrameLayout>
 
