--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/img"
     tools:context=".LoginFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -21,6 +22,7 @@
             android:hint="Email...."
             android:inputType="textEmailAddress"
             android:minHeight="48dp"
+            android:textColor="#000000"
             app:layout_constraintBottom_toTopOf="@+id/etPasswordLogin"
             app:layout_constraintEnd_toEndOf="@+id/etPasswordLogin"
             app:layout_constraintTop_toTopOf="parent" />
@@ -34,6 +36,7 @@
             android:hint="Password..."
             android:inputType="textPassword"
             android:minHeight="48dp"
+            android:textColor="#000000"
             app:layout_constraintBottom_toTopOf="@+id/etButtomLogin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -45,8 +48,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginBottom="44dp"
-            android:backgroundTint="#6F7F8F"
+            android:backgroundTint="#755E83"
             android:text="Login"
+            android:textColor="#000000"
             app:layout_constraintBottom_toTopOf="@+id/tvForgotPasswordLinkLogin"
             app:layout_constraintStart_toStartOf="@+id/tvForgotPasswordLinkLogin"
             app:layout_constraintTop_toBottomOf="@+id/etPasswordLogin" />
@@ -57,6 +61,7 @@
             android:layout_height="25dp"
             android:layout_marginTop="40dp"
             android:text="        Signup"
+            android:textColor="#050505"
             app:layout_constraintEnd_toEndOf="@+id/tvForgotPasswordLinkLogin"
             app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordLinkLogin" />
 
@@ -66,6 +71,7 @@
             android:layout_height="19dp"
             android:layout_marginBottom="149dp"
             android:text="ForgotPassword"
+            android:textColor="#000000"
             app:layout_constraintBottom_toTopOf="@+id/tvSignupLinkLogin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
