--- a/app/src/main/res/layout/fragment_update_profile2.xml
+++ b/app/src/main/res/layout/fragment_update_profile2.xml
@@ -3,15 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UpdateProfile2"
-    android:background="@drawable/top_backgroun_profile"
+    android:background="@drawable/img"
     android:backgroundTint="#3EFFFFFF"
-    >
+    tools:context=".UpdateProfile2">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/img"
         android:orientation="vertical">
 
         <EditText
@@ -21,7 +21,8 @@
             android:ems="10"
             android:hint="first name..."
             android:inputType="textEmailAddress"
-            android:minHeight="48dp" />
+            android:minHeight="48dp"
+            android:textColor="#000000" />
 
         <EditText
             android:id="@+id/etLastnameUserDetailsEdit"
@@ -30,7 +31,8 @@
             android:ems="10"
             android:hint="last name..."
             android:inputType="textEmailAddress"
-            android:minHeight="48dp" />
+            android:minHeight="48dp"
+            android:textColor="#000000" />
 
         <EditText
             android:id="@+id/etEmail"
@@ -39,7 +41,8 @@
             android:ems="10"
             android:hint="email.."
             android:inputType="textEmailAddress"
-            android:minHeight="48dp" />
+            android:minHeight="48dp"
+            android:textColor="#000000" />
 
         <EditText
             android:id="@+id/etPassword"
@@ -47,7 +50,8 @@
             android:layout_height="48dp"
             android:ems="10"
             android:hint="password..."
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:textColor="#000000" />
 
         <!-- Add the Phone EditText -->
 
@@ -59,13 +63,15 @@
             android:hint="phone...."
             android:inputType="phone"
             android:minHeight="48dp"
-            android:textAlignment="viewStart" />
+            android:textAlignment="viewStart"
+            android:textColor="#000000" />
 
         <ImageView
             android:id="@+id/ivUserUserDetailsEdit"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:src="@drawable/ic_profile" />
+            android:background="@drawable/ic_3"
+           />
 
         <!-- android:srcCompat="@android:mipmap/sym_def_app_icon"/> -->
 
@@ -73,7 +79,8 @@
             android:id="@+id/btnUpdateUserDetailsEdit"
             android:layout_width="207dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="#6F7F8F"
-            android:text="UPDATE" />
+            android:backgroundTint="#755E83"
+            android:text="UPDATE"
+            android:textColor="#000000" />
     </LinearLayout>
 </FrameLayout>
