--- a/app/src/main/res/layout/rest_item.xml
+++ b/app/src/main/res/layout/rest_item.xml
@@ -3,25 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="150dp">
+    android:layout_height="150dp"
+    >
 
     <ImageView
         android:id="@+id/ivPhoto"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_weight="1"
-        tools:srcCompat="@tools:sample/avatars" />
-
-    <TextView
-        android:id="@+id/tvPhoneRestItem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        tools:srcCompat="@drawable/ic_3" />
 
     <TextView
         android:id="@+id/tvNameRestItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:textColor="#000000" />
+
+    <TextView
+        android:id="@+id/tvPhoneRestItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textColor="#000000" />
 
 </LinearLayout>
