--- a/app/src/main/res/layout/fragment_add_hotel.xml
+++ b/app/src/main/res/layout/fragment_add_hotel.xml
@@ -35,8 +35,8 @@
             android:layout_marginEnd="20dp"
 
             android:layout_marginBottom="104dp"
+            android:background="@drawable/ic_profile"
             android:backgroundTint="#2FFFFFFF"
-            android:background="@drawable/ic_3"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
