--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -50,11 +50,10 @@
             android:layout_marginTop="84dp"
             android:layout_marginEnd="159dp"
             android:background="@drawable/ic_3"
-
-
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etPhoneSignupFragment" />
+            app:layout_constraintTop_toBottomOf="@+id/etPhoneSignupFragment"
+            tools:srcCompat="@drawable/ic_3" />
 
         <TextView
             android:id="@+id/H1"
