--- a/app/src/main/res/layout/rest_item.xml
+++ b/app/src/main/res/layout/rest_item.xml
@@ -27,4 +27,15 @@
         android:layout_weight="1"
         android:textColor="#000000" />
 
+    <ImageView
+        android:id="@+id/ivFavoriteIcon"
+        android:layout_width="48dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/ic_fav"
+        android:clickable="true"
+        android:contentDescription="TODO"
+        tools:ignore="TouchTargetSizeCheck" />
+
 </LinearLayout>
