--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/img"
-    tools:context=".SignupFragment">
+    android:background="@drawable/pic2"
+    tools:context=".Fragments.SignupFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -22,7 +22,8 @@
             android:hint="password...."
             android:inputType="textPassword"
             android:minHeight="48dp"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
             app:layout_constraintBottom_toTopOf="@+id/etConfirmPasswordSignupFragment"
             app:layout_constraintEnd_toEndOf="@+id/etUsernameSignup"
             app:layout_constraintTop_toBottomOf="@+id/etUsernameSignup" />
@@ -34,7 +35,7 @@
             android:layout_marginStart="44dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="17dp"
-            android:backgroundTint="#755E83"
+            android:backgroundTint="#9F9BA1"
             android:text="SIGNUP"
             android:textColor="#000000"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -52,8 +53,7 @@
             android:background="@drawable/ic_3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etPhoneSignupFragment"
-            tools:srcCompat="@drawable/ic_3" />
+            app:layout_constraintTop_toBottomOf="@+id/etPhoneSignupFragment" />
 
         <TextView
             android:id="@+id/H1"
@@ -79,7 +79,8 @@
             android:hint="firstname..."
             android:inputType="text"
             android:minHeight="48dp"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
             app:layout_constraintBottom_toTopOf="@+id/etLastnameSignupFragment"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -94,7 +95,8 @@
             android:hint="lastname..."
             android:inputType="text"
             android:minHeight="48dp"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
             app:layout_constraintStart_toStartOf="@+id/etFirstnameSignupFragment"
             app:layout_constraintTop_toBottomOf="@+id/etFirstnameSignupFragment" />
 
@@ -107,7 +109,8 @@
             android:hint="confirm password..."
             android:inputType="textPassword"
             android:minHeight="48dp"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
             app:layout_constraintEnd_toEndOf="@+id/etPasswordSignup"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/etPasswordSignup"
@@ -122,7 +125,8 @@
             android:hint="phone..."
             android:inputType="number|numberDecimal|numberSigned"
             android:minHeight="48dp"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
             app:layout_constraintEnd_toEndOf="@+id/etConfirmPasswordSignupFragment"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/etConfirmPasswordSignupFragment"
@@ -134,7 +138,7 @@
             android:layout_height="52dp"
             android:layout_marginStart="20dp"
             android:layout_marginBottom="16dp"
-            android:backgroundTint="#755E83"
+            android:backgroundTint="#9F9BA1"
             android:text="back"
             android:textColor="#000000"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -151,7 +155,8 @@
             android:hint="Email..."
             android:inputType="textEmailAddress"
             android:minHeight="48dp"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
             app:layout_constraintBottom_toTopOf="@+id/etPasswordSignup"
             app:layout_constraintEnd_toEndOf="@+id/etLastnameSignupFragment"
             app:layout_constraintStart_toStartOf="@+id/etLastnameSignupFragment"
