--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FavoriteFragment">
+    android:background="@drawable/pic2"
+    tools:context=".Fragments.FavoriteFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
