--- a/app/src/main/res/layout/fragment_hotels.xml
+++ b/app/src/main/res/layout/fragment_hotels.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/img"
-    tools:context=".HotelsFragment">
+    android:background="@drawable/pic2"
+    tools:context=".Fragments.HotelsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
